Bug fixed for audio component, working for windows host os in progress for ffmpeg